catalog/ingress/kubernetes/samples/sample-ping-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-ping-svc
  labels:
    app: sample-ping-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: sample-ping-app
